--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -57,6 +57,9 @@
 #include <array>
 #include <cassert>
 #include <stdexcept>
+{%- if gt_backend != "cuda" %}
+#include <cmath>
+{%- endif %}
 
 namespace {{ stencil_unique_name }} {
 
