Add ParallelRaceConditionChecker, FieldDependencyGraphCreator, and TestParallelComputations for race condition checking.
Co-authored-by: Johann Dahm <johannd@vulcan.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ install_requires =
     tabulate~=0.8
     typing-extensions~=3.7
     click~=7.1
+    networkx~=2.4
 
 [options.packages.find]
 where = src
