Fix 'known_third_party' in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -125,7 +125,7 @@ lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = gt4py,__externals__,__gtscript__
-known_third_party = attr,black,click,dawn4py,hypothesis,jinja2,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate,typing_extensions
+known_third_party = attr,black,click,dawn4py,hypothesis,jinja2,networkx,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate,typing_extensions
 
 [mypy]
 follow_imports = silent
