add stencil generator cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ python_requires = >= 3.6
 install_requires =
     attrs~=19.1
     black>=19.3b0
+    cached-property~=1.5
     hypothesis>=4.14
     jinja2~=2.10
     numpy~=1.15
