--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
     python: python3.6
 repos:
 -   repo: https://github.com/psf/black
-    rev: stable
+    rev: 20.8b1
     hooks:
     - id: black
 
@@ -13,12 +13,12 @@ repos:
       args: ["--application-directories=src:tests"]
 
 -   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.1.0
+    rev: v5.4.2
     hooks:
     - id: isort
 
 -   repo: https://gitlab.com/PyCQA/flake8
-    rev: 3.8.2
+    rev: 3.8.3
     hooks:
     - id: flake8
       exclude: >
@@ -75,7 +75,7 @@ repos:
           )$
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.780
+    rev: v0.782
     hooks:
     - id: mypy
       exclude:
@@ -102,7 +102,7 @@ repos:
           )$
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
+    rev: v3.2.0
     hooks:
         - id: check-json
         - id: pretty-format-json
