--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,7 @@ repos:
     rev: 3.8.3
     hooks:
     - id: flake8
+      additional_dependencies: ["flake8-mutable"]
       exclude: >
           (?x)^(
           setup.py |
