add checker for docstring formatting and phrasing.

--- a/setup.cfg
+++ b/setup.cfg
@@ -107,6 +107,14 @@ max-line-length = 99
 ignore =
     N802  # function name should be lowercase
     W503  # line break occurred before a binary operator
+    D100  # public module needs docstring
+    D101  # public class needs docstring
+    D102  # public method needs docstring
+    D103  # public function needs docstring
+    D104  # public package needs docstring
+    D105  # magic method needs docstring
+    D106  # nested class needs docstring
+    D107  # __ini__ needs docstring
 exclude =
     .tox
     build
