add checker to lint reStructureText in docstrings.

--- a/setup.cfg
+++ b/setup.cfg
@@ -121,6 +121,16 @@ exclude =
     dist
     .eggs
     docs/conf.py
+rst-roles=
+    py:mod,
+    py:func,
+    py:data,
+    py:const,
+    py:class,
+    py:meth,
+    py:attr,
+    py:exc,
+    py:obj,
 
 [tool:isort]
 skip_glob =
