--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
     rev: 3.8.3
     hooks:
     - id: flake8
-      additional_dependencies: ["flake8-mutable", "flake8-fixme", "flake8-docstrings"]
+      additional_dependencies: ["flake8-mutable", "flake8-fixme", "flake8-docstrings", "flake8-rst-docstrings", "pygments"]
       exclude: >
           (?x)^(
           setup.py |
