remove block merging unit test from mypy checking
reason: mypy reccognizes attr-classes only when default
`@attr.s` is being used, not with custom wrappers

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -99,6 +99,7 @@ repos:
           tests/test_unittest/test_call_interface.py |
           tests/test_unittest/test_gtscript_frontend.py |
           tests/test_unittest/test_storage.py |
+          tests/test_unittest/test_merge_blocks_pass.py |
           )$
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
