--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -44,6 +44,7 @@
     }
     - stencil_unique_name: str
     - tmp_fields: [{ "name": str, "dtype": str, "axes": str }]
+    - used_axes: [str]
 #}
 
 {%- if gt_backend == "cuda" %}
@@ -81,15 +82,30 @@ static constexpr gt::uint_t halo_size_j = {{ halo_sizes[1] }};
 static constexpr gt::uint_t halo_size_k = {{ halo_sizes[2] }};
 
 // Storage definitions
+{%- for axes in used_axes %}
 template <int Id>
+{%- if axes == "ijk" %}
 using storage_info_t =
     gt::storage_traits<backend_t>::storage_info_t<
         Id, 3,
+{%- else %}
+using storage_info_{{ axes }}_t =
+    gt::storage_traits<backend_t>::storage_info_t<
+        Id, {{ axes|length }},
+{%- endif %}
         gt::halo<0, 0, 0 /* not used */>>;
+{%- endfor %}
 
+{%- for axes in used_axes %}
 template<typename T, int Id>
+{%- if axes == "ijk" %}
 using data_store_t =
     gt::storage_traits<backend_t>::data_store_t<T, storage_info_t<Id>>;
+{%- else %}
+using data_store_{{ axes }}_t =
+    gt::storage_traits<backend_t>::data_store_t<T, storage_info_{{ axes }}_t<Id>>;
+{%- endif %}
+{%- endfor %}
 
 // Placeholder definitions
 {%- for field in arg_fields %}
@@ -102,7 +118,6 @@ using p_{{ param.name }} = gt::arg<{{ loop.index0 }}, gt::global_parameter<{{ pa
 // Computation
 using computation_t =
     gt::computation<p_{{ (arg_fields|list + parameters|list)|map(attribute='name')|join(", p_")}}>;
-
 
 // Constants
 {% for name, value in constants.items() %}
@@ -153,7 +168,11 @@ auto make_grid(const std::array<gt::uint_t, 3>& compute_domain_shape) {
 {% if tmp_fields -%}
 // Placeholder definitions
 {%- for field in tmp_fields %}
+{%- if field.axes == "ijk" %}
 using p_{{ field.name }} = gt::tmp_arg<{{ loop.index0 }}, data_store_t<{{ field.dtype }}, 0>>;
+{%- else %}
+using p_{{ field.name }} = gt::tmp_arg<{{ loop.index0 }}, data_store_{{ field.axes }}_t<{{ field.dtype }}, 0>>;
+{%- endif %}
 {%- endfor %}
 {%- endif %}
 
