--- a/setup.cfg
+++ b/setup.cfg
@@ -107,14 +107,7 @@ max-line-length = 99
 ignore =
     N802  # function name should be lowercase
     W503  # line break occurred before a binary operator
-    D100  # public module needs docstring
-    D101  # public class needs docstring
-    D102  # public method needs docstring
-    D103  # public function needs docstring
-    D104  # public package needs docstring
-    D105  # magic method needs docstring
-    D106  # nested class needs docstring
-    D107  # __ini__ needs docstring
+    D1    # public code object needs docstring
 exclude =
     .tox
     build
@@ -122,15 +115,15 @@ exclude =
     .eggs
     docs/conf.py
 rst-roles=
-    py:mod,
-    py:func,
-    py:data,
-    py:const,
-    py:class,
-    py:meth,
-    py:attr,
-    py:exc,
-    py:obj,
+    py:mod, mod,
+    py:func, func,
+    py:data, data,
+    py:const, const,
+    py:class, class,
+    py:meth, meth,
+    py:attr, attr,
+    py:exc, exc,
+    py:obj, obj,
 
 [tool:isort]
 skip_glob =
