--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -44,7 +44,7 @@
     }
     - stencil_unique_name: str
     - tmp_fields: [{ "name": str, "dtype": str, "axes": str }]
-    - used_axes: [str]
+    - used_axes: [{ "name": str, "selector": str }]
 #}
 
 {%- if gt_backend == "cuda" %}
@@ -84,26 +84,26 @@ static constexpr gt::uint_t halo_size_k = {{ halo_sizes[2] }};
 // Storage definitions
 {%- for axes in used_axes %}
 template <int Id>
-{%- if axes == "ijk" %}
+{%- if axes.name == "ijk" %}
 using storage_info_t =
     gt::storage_traits<backend_t>::storage_info_t<
         Id, 3,
 {%- else %}
-using storage_info_{{ axes }}_t =
-    gt::storage_traits<backend_t>::storage_info_t<
-        Id, {{ axes|length }},
+using storage_info_{{ axes.name }}_t =
+    gt::storage_traits<backend_t>::special_storage_info_t<
+        Id, gt::selector<{{ axes.selector }}>,
 {%- endif %}
         gt::halo<0, 0, 0 /* not used */>>;
 {%- endfor %}
 
 {%- for axes in used_axes %}
 template<typename T, int Id>
-{%- if axes == "ijk" %}
+{%- if axes.name == "ijk" %}
 using data_store_t =
     gt::storage_traits<backend_t>::data_store_t<T, storage_info_t<Id>>;
 {%- else %}
-using data_store_{{ axes }}_t =
-    gt::storage_traits<backend_t>::data_store_t<T, storage_info_{{ axes }}_t<Id>>;
+using data_store_{{ axes.name }}_t =
+    gt::storage_traits<backend_t>::data_store_t<T, storage_info_{{ axes.name }}_t<Id>>;
 {%- endif %}
 {%- endfor %}
 
