--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -277,7 +277,9 @@ void run(const std::array<gt::uint_t, 3>& domain,
             {%- filter indent(width=extra_indent) %}
             {{- stage_comma() }}
             gt::make_stage<{{ stage }}_func>(
-                p_{{ stage_functors[stage].args|map(attribute="name")|join("(), p_")}}(){%- if splitters | length > 0 %}, p_{{ splitters|join("(), p_")}}(){%- endif %}
+                {%- set arg_comma = joiner(",") -%}
+                {%- for arg in stage_functors[stage].args|map(attribute="name") %}{{ arg_comma() }} p_{{ arg }}(){%- endfor %}
+                {%- for arg in splitters %}{{ arg_comma() }} p_{{ arg }}(){%- endfor %}
             )
             {%- endfilter %}
         {%- endfor %}
