--- a/src/gt4py/backend/templates/stencil_module.py.in
+++ b/src/gt4py/backend/templates/stencil_module.py.in
@@ -32,6 +32,7 @@ import time
 
 import numpy as np
 from numpy import dtype
+from typing import Dict
 {{ imports }}
 
 from gt4py.stencil_object import AccessKind, Boundary, DomainInfo, FieldInfo, ParameterInfo, StencilObject
@@ -115,7 +116,7 @@ class {{ class_name }}(StencilObject):
         return type(self)._gt_options_
 
     @property
-    def splitters(self) -> list:
+    def splitters(self) -> Dict[str, int]:
         return type(self)._gt_splitters_
 
     def __call__(
