Additional code checkers (#180)
add additional code checkers and pertaining config

checkers for
* mutable default parameters.
* #fixme style comments.
* docstring formatting and phrasing.
* reStructureText in docstrings.
* outcommented code and forgotten debugger statements

config: use shorthand to ignore all D1** warnings, allow default roles

Co-authored-by: Rico Häuselmann <ricoh@cscs.ch>

--- a/setup.cfg
+++ b/setup.cfg
@@ -107,12 +107,23 @@ max-line-length = 99
 ignore =
     N802  # function name should be lowercase
     W503  # line break occurred before a binary operator
+    D1    # public code object needs docstring
 exclude =
     .tox
     build
     dist
     .eggs
     docs/conf.py
+rst-roles=
+    py:mod, mod,
+    py:func, func,
+    py:data, data,
+    py:const, const,
+    py:class, class,
+    py:meth, meth,
+    py:attr, attr,
+    py:exc, exc,
+    py:obj, obj,
 
 [tool:isort]
 skip_glob =
