--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,29 @@
 include:
   - remote: 'https://gitlab.com/cscs-ci/recipes/-/raw/master/templates/v2/.cscs.yml'
 
+.py36: &py36
+  PYVERSION_PREFIX: py36
+  PYVERSION: 3.6.12
+
+.py37: &py37
+  PYVERSION_PREFIX: py37
+  PYVERSION: 3.7.9
+
+.py38: &py38
+  PYVERSION_PREFIX: py38
+  PYVERSION: 3.8.5
+
 stages:
   - image
   - test
   - cleanup
-
-variables:
-  PY38: "3.8.5"
-  PY37: "3.7.9"
-  PY36: "3.6.12"
 
 build py38:
   extends: .dind
   stage: image
   variables:
     BUILD_IMAGE: $CI_REGISTRY_IMAGE/gt4py-ci/image:$PYVERSION
-    PYVERSION: "$PY38"
+    <<: *py38
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker pull $BUILD_IMAGE || echo "has not been built yet"
@@ -30,12 +37,12 @@ build py38:
 build py37:
   extends: build py38
   variables:
-    PYVERSION: "$PY37"
+    <<: *py37
 
 build py36:
   extends: build py38
   variables:
-    PYVERSION: "$PY36"
+    <<: *py36
 
 test py38:
   extends: .daint
@@ -55,22 +62,19 @@ test py38:
     SLURM_CONSTRAINT: gpu
     SLURM_JOB_NUM_NODES: 1
     SLURM_TIMELIMIT: 120
-    PYVERSION_PREFIX: py38
-    PYVERSION: "$PY38"
+    <<: *py38
 
 test py37:
   extends: test py38
   needs: ["build py37"]
   variables:
-    PYVERSION_PREFIX: py37
-    PYVERSION: "$PY37"
+    <<: *py37
 
 test py36:
   extends: test py38
   needs: ["build py36"]
   variables:
-    PYVERSION_PREFIX: py36
-    PYVERSION: "$PY36"
+    <<: *py36
 
 notify_github_success:
   stage: cleanup
