--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ notify_github_pending:
   stage: notifystart
   only: ["master", "staging", "trying"]
   tags: ["kubernetes"]
-  image: makocchi/alpine-git-curl-jq
+  image: $CI_REGISTRY_IMAGE/bgcj
   script: ./ci/set_github_status.sh pending
 
 build py38:
@@ -89,7 +89,7 @@ notify_github_success:
   when: on_success
   only: ["master", "staging", "trying"]
   tags: ["kubernetes"]
-  image: makocchi/alpine-git-curl-jq
+  image: $CI_REGISTRY_IMAGE/bgcj
   script: ./ci/set_github_status.sh success
 
 notify_github_failure:
@@ -97,5 +97,5 @@ notify_github_failure:
   when: on_failure
   only: ["master", "staging", "trying"]
   tags: ["kubernetes"]
-  image: makocchi/alpine-git-curl-jq
+  image: $CI_REGISTRY_IMAGE/bgcj
   script: ./ci/set_github_status.sh failure
