Add CUDA 10.2 to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,8 @@ cuda100 =
     cupy-cuda100
 cuda101 =
     cupy-cuda101
+cuda102 =
+    cupy-cuda102
 dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
 testing =
