--- a/setup.cfg
+++ b/setup.cfg
@@ -76,6 +76,8 @@ cuda102 =
     cupy-cuda102
 dawn =
     dawn4py@git+https://github.com/MeteoSwiss-APN/dawn.git@0.0.2#subdirectory=dawn
+gtc =
+    eve-toolchain@git+https://github.com/GridTools/gtc.git
 testing =
     tox~=3.14
 
@@ -140,7 +142,7 @@ lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = gt4py,__externals__,__gtscript__
-known_third_party = attr,black,cached_property,click,dawn4py,hypothesis,jinja2,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate,typing_extensions
+known_third_party = attr,black,cached_property,click,dawn4py,devtools,eve,hypothesis,jinja2,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate,typing_extensions
 
 [mypy]
 follow_imports = silent
