--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -101,6 +101,8 @@ repos:
           tests/test_unittest/test_gtscript_frontend.py |
           tests/test_unittest/test_storage.py |
           tests/definition_setup.py |
+          examples/demo_copy.py |
+          examples/demo_lap.py |
           )$
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
