--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -100,6 +100,7 @@ repos:
           tests/test_unittest/test_call_interface.py |
           tests/test_unittest/test_gtscript_frontend.py |
           tests/test_unittest/test_storage.py |
+          tests/test_unittest/test_gtc_backend/test_stencil_object_snippet_generators.py |
           tests/definition_setup.py |
           examples/demo_copy.py |
           examples/demo_lap.py |
