GTC: naive python gen: split modules (#212)
* split stencil and computation modules
* add file info pass
* make gtir nodes immutable
* update unit tests for stencil object snippet generators
* naive python ir and translator from gtir
* pnir -> python ast
* [wip/exp] stencil module via AST
* [wip] code generator wiring & fix linter errors

Co-authored-by: Rico Häuselmann <ricoh@cscs.ch>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -100,7 +100,11 @@ repos:
           tests/test_unittest/test_call_interface.py |
           tests/test_unittest/test_gtscript_frontend.py |
           tests/test_unittest/test_storage.py |
+          tests/test_unittest/test_gtc_backend/test_stencil_object_snippet_generators.py |
+          tests/test_unittest/test_gtc_backend/test_pnir_to_ast.py |
           tests/definition_setup.py |
+          examples/demo_copy.py |
+          examples/demo_lap.py |
           )$
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
