--- a/setup.cfg
+++ b/setup.cfg
@@ -142,7 +142,7 @@ lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = gt4py,__externals__,__gtscript__
-known_third_party = attr,black,cached_property,click,dawn4py,devtools,eve,hypothesis,jinja2,mako,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate,typing_extensions
+known_third_party = astor,attr,black,cached_property,click,dawn4py,devtools,eve,hypothesis,jinja2,numpy,pkg_resources,pybind11,pytest,setuptools,tabulate,tests,typing_extensions
 
 [mypy]
 follow_imports = silent
