Enable lower dim data stores in GT backends

--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -73,8 +73,8 @@ using backend_t = gt::backend::{{ gt_backend }};
 static constexpr gt::uint_t level_offset_limit = {{ k_axis.offset_limit }};
 
 using axis_t =
-    gridtools::axis<{{ k_axis.n_intervals }}, /* NIntervals */
-                    gt::axis_config::offset_limit<level_offset_limit>>;
+    gt::axis<{{ k_axis.n_intervals }}, /* NIntervals */
+             gt::axis_config::offset_limit<level_offset_limit>>;
 
 // These halo sizes are used to determine the sizes of the temporaries
 static constexpr gt::uint_t halo_size_i = {{ halo_sizes[0] }};
@@ -110,11 +110,15 @@ using data_store_{{ axes.name }}_t =
 // Placeholder definitions
 {% set arg_counter = 0 -%}
 {%- for field in arg_fields %}
+{%- if field.axes == "ijk" %}
 using p_{{ field.name }} = gt::arg<{{ arg_counter + loop.index0 }}, data_store_t<{{ field.dtype }}, {{ field.layout_id }}>>;
+{%- else %}
+using p_{{ field.name }} = gt::arg<{{ arg_counter + loop.index0 }}, data_store_{{ field.axes }}_t<{{ field.dtype }}, {{ field.layout_id }}>>;
+{%- endif %}
 {%- endfor %}
 {% set arg_counter = arg_counter + arg_fields|length %}
 {% for param in parameters %}
-using p_{{ param.name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<{{ param.dtype }}>>;
+using p_{{ param.name }} = gt::arg<{{ arg_counter + loop.index0 }}, gt::global_parameter<backend_t, {{ param.dtype }}>>;
 {%- endfor %}
 {% set arg_counter = arg_counter + parameters|length %}
 {% if tmp_fields -%}
@@ -179,11 +183,12 @@ auto make_grid(const std::array<gt::uint_t, 3>& compute_domain_shape) {
 }
 
 
+{%- for axes in used_axes %}
+{%- if axes.name == "ijk" %}
 template<typename T, int Id>
 data_store_t<T, Id> make_data_store(const BufferInfo& bi,
                                     const std::array<gt::uint_t, 3>& compute_domain_shape,
-                                    const std::array<gt::uint_t, 3>& origin)
-{
+                                    const std::array<gt::uint_t, 3>& origin) {
     if (bi.ndim != 3) {
         throw std::runtime_error("Wrong number of dimensions [" +
                                  std::to_string(bi.ndim) +
@@ -208,9 +213,35 @@ data_store_t<T, Id> make_data_store(const BufferInfo& bi,
                            gt::ownership::external_cpu};
 {%- endif %}
 }
+{%- else %}
+template<typename T, int Id>
+data_store_{{ axes.name }}_t<T, Id> make_data_store_{{ axes.name }}(const BufferInfo& bi,
+                                       const std::array<gt::uint_t, 3>& compute_domain_shape,
+                                       const std::array<gt::uint_t, 3>& origin) {
+    if (bi.ndim != 3) {
+        throw std::runtime_error("Wrong number of dimensions [" +
+                                 std::to_string(bi.ndim) +
+                                 " != " + std::to_string(3) + "]");
+    }
+    gt::array<gt::uint_t, 3> dims{};
+    gt::array<gt::uint_t, 3> strides{};
+    T* ptr = static_cast<T*>(bi.ptr);
+    for (int i = 0; i < 3; ++i) {
+        strides[i] = bi.strides[i] / sizeof(T);
+        ptr += strides[i] * origin[i];
+        dims[i] = compute_domain_shape[i]+2*origin[i];
+    }
+    return data_store_{{ axes.name }}_t<T, Id>{storage_info_{{ axes.name }}_t<Id>{dims, strides}, ptr,
+{%- if gt_backend == "cuda" %}
+                              gt::ownership::external_gpu};
+{%- else %}
+                              gt::ownership::external_cpu};
+{%- endif %}
+}
+{%- endif %}
+{%- endfor %}
 
 }  // namespace
-
 
 {% if parameters -%}
 // Global parameters
@@ -251,7 +282,11 @@ void run(const std::array<gt::uint_t, 3>& domain,
 #}
     // Initialize data stores from input buffers
 {%- for field in arg_fields %}
+{%- if field.axes == "ijk" %}
     auto ds_{{ field.name }} = make_data_store<{{ field.dtype }}, {{ field.layout_id }}>(bi_{{ field.name }}, domain, {{ field.name }}_origin);
+{%- else %}
+    auto ds_{{ field.name }} = make_data_store_{{ field.axes }}<{{ field.dtype }}, {{ field.layout_id }}>(bi_{{ field.name }}, domain, {{ field.name }}_origin);
+{%- endif %}
 {%- endfor %}
 
     // Update global parameters
