--- a/src/gt4py/backend/templates/computation.src.in
+++ b/src/gt4py/backend/templates/computation.src.in
@@ -48,7 +48,7 @@
     - tmp_fields: [{ "name": str, "dtype": str }]
 #}
 
-{% set axes_names = ['I','J', 'K'] -%}
+{%- set axes_names = ["I", "J", "K"] -%}
 
 {%- if gt_backend == "cuda" %}
 #define GT_USE_GPU
@@ -117,11 +117,6 @@ using p_{{ field.name }} = gt::tmp_arg<{{ arg_counter + loop.index0 }}, data_sto
 {%- endfor -%}
 {% set arg_counter = arg_counter + tmp_fields|length %}
 {%- endif %}
-
-// Computation
-using computation_t =
-    gt::computation<p_{{ (arg_fields|list + parameters|list)|map(attribute='name')|join(", p_")}}>;
-
 
 // Constants
 {% for name, value in constants.items() %}
@@ -246,13 +241,13 @@ void run(const std::array<gt::uint_t, 3>& domain,
 {%- endfor %}
 
 {%- if requires_positional %}
-    computation_t gt_computation = gt::make_positional_computation<backend_t>(
+    auto gt_computation = gt::make_positional_computation<backend_t>(
 {%- else %}
-    computation_t gt_computation = gt::make_computation<backend_t>(
+    auto gt_computation = gt::make_computation<backend_t>(
 {%- endif %}
         make_grid(domain),
 {%- for param in parameters %}
-        p_{{ param.name }}() = gt::make_global_parameter({{ param.name }}),
+        p_{{ param.name }}() = gt::make_global_parameter<{{ param.dtype }}>({{ param.name }}),
 {% endfor -%}
 {%- if requires_positional -%}
 {%- for axis_name in axes_names %}
